syntax = "proto3";

package grpcdomain;

import "objects.proto";


// ClosePositionRequest contains the name of the election which was being held,
message ClosePositionRequest {
	// Identity is the identity of the client
	Identity Identity = 1;

	// Name is the name of the service which is open
	string Name = 2;
	// Elected is the port which the service is availible at
	bool Elected = 3;
}
// ClosePositionReply contains the acceptance of the Server
message ClosePositionReply {
	// Accept is the servers acceptance of the position
	bool Accept = 1;
}