syntax = "proto3";

package grpcdomain;

import "get_services.proto";
import "identity_list.proto";
import "open_position.proto";
import "close_position.proto";

/*		Command to rebuild from parent directory
=========================================================

protoc -I grpc/ --go_out=plugins=grpc:grpc \
	domain.proto \
	get_services.proto \
	identity_list.proto \
	open_position.proto \
	close_position.proto \
	objects.proto

=========================================================
*/

service Domain {

	// GetServices returns the availible services and their locations
	rpc GetServices (GetServicesRequest) returns (GetServicesReply) {}

	// ShareIdentityList Exchanges the IdentityList which the domain is aware of
	rpc ShareIdentityList (IdentityListRequest) returns (IdentityListReply) {}

	// DumpIdentityList Dumps the IdentityList which the domain is aware of
	rpc DumpIdentityList (DumpIdentityListRequest) returns (IdentityListReply) {}

	// OpenPosition declares the new service which is needed and requests Appointments
	rpc OpenPosition (OpenPositionRequest) returns (OpenPositionReply) {}

	// ClosePosition ends an election and informs if the position was awarded
	rpc ClosePosition (ClosePositionRequest) returns (ClosePositionReply) {}
}
